--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ lazy_static = "1.4.0"
 regex = "1.5.5"
 crossterm = "0.23.2"
 encoding = "0.2.33"
+reqwest = { version = "0.11.10", features = ["blocking", "json"] }
